@@ -79,12 +79,12 @@
 	<properties>
 		<java.source.version>1.7</java.source.version>
 		<java.target.version>${java.source.version}</java.target.version>
-		<java.compiler.version>1.7</java.compiler.version>
+		<java.compiler.version>${java.target.version}</java.compiler.version>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>${project.build.sourceEncoding}</project.reporting.outputEncoding>
 
-		<!-- versões de dependências -->
+		<!-- dependencies version -->
 		<jstl.version>1.2</jstl.version>
 		<dozer.version>5.4.0</dozer.version>
 		<slf4j.version>1.7.7</slf4j.version>
@@ -94,21 +94,31 @@
 		<servlet-api.version>2.5</servlet-api.version>
 		<commons-lang.version>3.3.2</commons-lang.version>
 
-		<!-- versões de dependências de teste -->
+		<!-- test dependencies version -->
 		<junit.version>4.11</junit.version>
 		<mockito.version>1.10.13</mockito.version>
 		<hamcrest-all.version>1.3</hamcrest-all.version>
 
-		<!-- versões de plugins -->
+		<!-- plugins version -->
+		<cobertura-maven-plugin.version>2.6</cobertura-maven-plugin.version>
+		<findbugs-maven-plugin.version>3.0.0</findbugs-maven-plugin.version>
+		<maven-changes-plugin.version>2.11</maven-changes-plugin.version>
+		<maven-changelog-plugin.version>2.3</maven-changelog-plugin.version>
+		<maven-checkstyle-plugin.version>2.13</maven-checkstyle-plugin.version>
 		<maven-clean-plugin.version>2.6.1</maven-clean-plugin.version>
 		<maven-compiler-plugin.version>3.2</maven-compiler-plugin.version>
 		<maven-dependency-plugin.version>2.9</maven-dependency-plugin.version>
 		<maven-jar-plugin.version>2.5</maven-jar-plugin.version>
 		<maven-javadoc-plugin.version>2.10.1</maven-javadoc-plugin.version>
+		<maven-pmd-plugin.version>3.3</maven-pmd-plugin.version>
 		<maven-resources-plugin.version>2.6</maven-resources-plugin.version>
 		<maven-scm-plugin.version>1.9.2</maven-scm-plugin.version>
+		<maven-site-plugin.version>3.4</maven-site-plugin.version>
 		<maven-source-plugin.version>2.4</maven-source-plugin.version>
+		<maven-surefire-report-plugin.version>2.18</maven-surefire-report-plugin.version>
 		<maven-war-plugin.version>2.5</maven-war-plugin.version>
+		<sonar-maven-plugin.version>2.4</sonar-maven-plugin.version>
+		<taglist-maven-plugin.version>2.4</taglist-maven-plugin.version>
 	</properties>
 
 	<build>
@@ -135,7 +145,6 @@
 			</resource>
 		</resources>
 
-		<!-- plugins comuns a todos os projetos -->
 		<plugins>
 			<!-- http://maven.apache.org/plugins/maven-clean-plugin/ -->
 			<plugin>
@@ -171,10 +180,43 @@
 				<artifactId>maven-resources-plugin</artifactId>
 				<version>${maven-resources-plugin.version}</version>
 			</plugin>
+
+			<!-- http://maven.apache.org/plugins/maven-surefire-plugin/ -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.12.2</version>
+				<configuration>
+					<argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
+				</configuration>
+			</plugin>
 		</plugins>
 
 		<pluginManagement>
 			<plugins>
+				<!-- http://mojo.codehaus.org/findbugs-maven-plugin/ -->
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>findbugs-maven-plugin</artifactId>
+					<version>${findbugs-maven-plugin.version}</version>
+					<configuration>
+						<effort>Max</effort>
+						<failOnError>true</failOnError>
+						<threshold>Low</threshold>
+						<xmlOutput>true</xmlOutput>
+						<includeFilterFile>findbugs-include.xml</includeFilterFile>
+					</configuration>
+					<executions>
+						<execution>
+						<id>analyze-compile</id>
+						<phase>compile</phase>
+						<goals>
+							<goal>check</goal>
+						</goals>
+						</execution>
+					</executions>
+				</plugin>
+
 				<!-- http://maven.apache.org/plugins/maven-war-plugin/ -->
 				<plugin>
 					<artifactId>maven-war-plugin</artifactId>
@@ -202,9 +244,67 @@
 		</pluginManagement>
 	</build>
 
-	<!-- plugins de report -->
 	<reporting>
 		<plugins>
+			<!-- http://mojo.codehaus.org/cobertura-maven-plugin/ -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>${cobertura-maven-plugin.version}</version>
+				<configuration>
+					<formats>
+						<format>html</format>
+						<format>xml</format>
+					</formats>
+					<excludes>
+						<exclude>**/*Test.class</exclude>
+					</excludes>
+				</configuration>
+			</plugin>
+
+			<!-- http://mojo.codehaus.org/findbugs-maven-plugin/ -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>findbugs-maven-plugin</artifactId>
+				<version>${findbugs-maven-plugin.version}</version>
+				<configuration>
+					<effort>Max</effort>
+					<failOnError>true</failOnError>
+					<threshold>Low</threshold>
+				</configuration>
+			</plugin>
+
+			<!-- http://maven.apache.org/plugins/maven-changes-plugin/ -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-changes-plugin</artifactId>
+				<version>${maven-changes-plugin.version}</version>
+				<configuration>
+					<xmlPath>src/site/changes.xml</xmlPath>
+				</configuration>
+				<reportSets>
+					<reportSet>
+						<reports>
+							<report>changes-report</report>
+						</reports>
+					</reportSet>
+				</reportSets>
+			</plugin>
+
+			<!-- http://maven.apache.org/plugins/maven-changelog-plugin/ -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-changelog-plugin</artifactId>
+				<version>${maven-changelog-plugin.version}</version>
+			</plugin>
+
+			<!-- http://maven.apache.org/plugins/maven-checkstyle-plugin/ -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+				<version>${maven-checkstyle-plugin.version}</version>
+			</plugin>
+
 			<!-- http://maven.apache.org/plugins/maven-javadoc-plugin/ -->
 			<plugin>
 				<artifactId>maven-javadoc-plugin</artifactId>
@@ -217,6 +317,43 @@
 						<link>http://java.sun.com/javase/7/docs/api/</link>
 					</links>
 				</configuration>
+			</plugin>
+
+			<!-- http://maven.apache.org/plugins/maven-pmd-plugin/ -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-pmd-plugin</artifactId>
+				<version>${maven-pmd-plugin.version}</version>
+				<configuration>
+					<targetJdk>${java.target.version}</targetJdk>
+					<minimumTokens>100</minimumTokens>
+					<sourceEncoding>${project.build.sourceEncoding}</sourceEncoding>
+				</configuration>
+			</plugin>
+
+			<!-- http://maven.apache.org/plugins/maven-site-plugin/ -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-site-plugin</artifactId>
+				<version>${maven-site-plugin.version}</version>
+			</plugin>
+
+			<!-- http://maven.apache.org/surefire/maven-surefire-report-plugin/ -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-report-plugin</artifactId>
+				<version>${maven-surefire-report-plugin.version}</version>
+				<configuration>
+					<showSuccess>false</showSuccess>
+					<argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
+				</configuration>
+			</plugin>
+
+			<!-- http://mojo.codehaus.org/taglist-maven-plugin/ -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>taglist-maven-plugin</artifactId>
+				<version>${taglist-maven-plugin.version}</version>
 			</plugin>
 		</plugins>
 	</reporting>
